tests/rustdoc-ui/ice-unresolved-import-100241.stderr
error[E0432]: unresolved import `inner`
  --> $DIR/ice-unresolved-import-100241.rs:9:13
   |
LL |     pub use inner::S;
   |             ^^^^^ use of unresolved module or unlinked crate `inner`
   |
help: if you wanted to use a crate named `inner`, use `cargo add inner` to add it to your `Cargo.toml` and import it in your code
   |
LL + extern crate inner;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
